Fix some findbugs violations