@@ -41,8 +41,8 @@ public class TableRowTransferHandler extends AbstractTableRowTransferHandler {
 
 	@Override
 	protected Transferable createTransferable(JComponent c) {
-		assert (c == table);
-		return new DataHandler(new Integer(table.getSelectedRow()), localObjectFlavor.getMimeType());
+		assert c == table;
+		return new DataHandler(Integer.valueOf(table.getSelectedRow()), localObjectFlavor.getMimeType());
 	}
 
 	@Override
